# askr

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  rust-toolchain.toml
.elyra/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml  split-laravel.yml
crates/askr/: Cargo.toml  build.rs
crates/askr-php/: Cargo.toml  build.rs
crates/askr-php/csrc/: shim.c
crates/askr-php/examples/: bench.rs  exts.rs  hello.rs  serve.rs
crates/askr-php/src/: lib.rs
crates/askr/src/: acme.rs  admin.rs  broadcast.rs  broadcast_sql.rs  cache.rs  cache_sql.rs  cgi.rs  compress.rs  config.rs  doctor.rs  http3.rs  main.rs  metrics.rs  observ_sql.rs  otel.rs  php.rs  pusher.rs  queue.rs  rcache.rs  record.rs  sandbox.rs  server.rs  shadow.rs  shmlock.rs  squeue.rs  squeue_sql.rs  supervisor.rs  tls.rs  upgrade.rs  upload.rs  worker.rs
docs/: ADMIN.md  ARCHITECTURE.md  AUTOTLS.md  BENCHMARKS.md  BROADCAST.md  BUILDING.md  CACHE.md  CLI.md  CONFIGURATION.md  COW.md  DEPLOYMENT.md  DOCKER.md  FEATURES.md  HOSTING.md  IO-URING.md  LARAVEL.md  OBSERVABILITY.md  PRD.md  README.md  SANDBOX.md  STABILITY.md  STORAGE_BACKEND.md  UBUNTU.md  WORKER_MODE.md
examples/: AskrCacheStore.php  AskrQueue.php  askr-paranoid.php  askr-queue.php  askr-scheduler.php  askr-test.php  askr.toml  laravel-worker.php
examples/docker/: .dockerignore  Dockerfile  README.md  askr.toml  docker-compose.yml
scripts/: bench.sh  build-libphp.sh  package-release.sh
scripts/h3bench/: Cargo.toml  run-in-docker.sh
scripts/h3bench/src/: main.rs
