[workspace]
resolver = "2"
members = [
    "crates/askr-php",
    "crates/askr",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Knut W. Horne <kh@gets.no>"]
repository = "https://github.com/wirelabs/askr"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
cc = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring", "x509-parser"] }

[profile.release]
lto = "thin"
codegen-units = 1
