[workspace]
resolver = "2"
members = [
    "crates/askr-php",
    "crates/askr",
]
# scripts/h3bench is a standalone benchmark tool (own deps, own workspace); it is
# not part of the build or CI.
exclude = ["scripts/h3bench"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Knut W. Horne <kh@gets.no>"]
repository = "https://github.com/kwhorne/askr"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
cc = "1"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring", "x509-parser"] }

[profile.release]
lto = "thin"
codegen-units = 1
