[package]
name = "askr-php"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Embedded PHP interpreter (embed SAPI) for the Askr application server — M0 spike."

[dependencies]

[build-dependencies]
cc = { workspace = true }

[[example]]
name = "hello"
path = "examples/hello.rs"
