[package]
name = "askr-php"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Embedded PHP interpreter (embed SAPI) via FFI for the Askr application server."
keywords = ["php", "embed", "sapi", "ffi", "interpreter"]
categories = ["external-ffi-bindings", "web-programming"]

[dependencies]

[dev-dependencies]
serde_json = "1"

[build-dependencies]
cc = { workspace = true }

[[example]]
name = "hello"
path = "examples/hello.rs"
