[package]
name = "askr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Askr — a standalone, memory-safe PHP application server."

[[bin]]
name = "askr"
path = "src/main.rs"

[dependencies]
askr-php = { path = "../askr-php" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
serde = { workspace = true }
toml = { workspace = true }
