[package]
name = "askr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Askr — a standalone, memory-safe PHP application server (embedded PHP, no FastCGI/FPM)."
keywords = ["php", "server", "laravel", "embedded", "http"]
categories = ["web-programming::http-server", "command-line-utilities"]
readme = "../../README.md"

[[bin]]
name = "askr"
path = "src/main.rs"

[dependencies]
askr-php = { path = "../askr-php" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
fastwebsockets = { version = "0.10", features = ["upgrade"] }
hmac = "0.12"
sha2 = "0.10"
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
