[package]
name = "askr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Askr — a standalone, memory-safe PHP application server (embedded PHP, no FastCGI/FPM)."
keywords = ["php", "server", "laravel", "embedded", "http"]
categories = ["web-programming::http-server", "command-line-utilities"]
readme = "../../README.md"

[[bin]]
name = "askr"
path = "src/main.rs"

[dependencies]
askr-php = { path = "../askr-php" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
fastwebsockets = { version = "0.10", features = ["upgrade"] }
hmac = "0.12"
sha2 = "0.10"
multer = "3"
futures-core = "0.3"
flate2 = "1"
brotli = "7"
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
instant-acme = "0.8.5"

# Optional L2 durable-queue backend (elyra-9): a SQL Anywhere / SQLite database
# implementing docs/STORAGE_BACKEND.md against sql-anywhere's QUEUE_CONTRACT.md.
# Off by default so the standard build and CI are unaffected.
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# Optional observability sink: ship logs/metrics to ElyraSQL over the MySQL wire
# protocol (docs/OBSERVABILITY.md). Off by default so the standard build/CI are
# unaffected; enable with `--features observ`.
mysql_async = { version = "0.37", default-features = false, features = ["minimal"], optional = true }

[features]
# Durable, replicated L2 storage backends over SQL Anywhere (queue first).
sql-backend = ["dep:rusqlite"]
# Observability telemetry sink to ElyraSQL.
observ = ["dep:mysql_async"]

# Linux-only hardening (seccomp syscall filter + Landlock filesystem sandbox).
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5"
landlock = "0.4"
