[package]
name = "h3bench"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone honest load client for comparing HTTP/2 (over TCP+TLS) with HTTP/3
# (over QUIC) against the same server under identical network impairment. Not part
# of the askr workspace; built only when running the D benchmark.

[[bin]]
name = "h3bench"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

[workspace]
